AGDNS-4277 fix get address entity
