# client_v2/src/api/model/netInterface.ts
@@ -4,12 +4,10 @@
 export interface NetInterface {
     /** Flags could be any combination of the following values, divided by the "|" character: "up", "broadcast", "loopback", "pointtopoint" and "multicast". */
     flags: string;
-    /** The IP address of the gateway. */
-    gateway_ip: string;
     hardware_address: string;
-    /** The addresses of the interface of v4 family. */
-    ipv4_addresses: string[];
-    /** The addresses of the interface of v6 family. */
-    ipv6_addresses: string[];
+    /** The addresses of the interface. */
+    ip_addresses: string[];
+    /** MTU value of the interface. */
+    mtu: number;
     name: string;
 }
